--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TruthFort - AI-Powered Fake News Detector</title>
+    <title>NewsCheck - AI-Powered Fake News Detector</title>
     <link rel="icon" type="image/png" href="/favicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -62,7 +62,7 @@
                         <i class="fas fa-shield-alt text-5xl text-cyan-400 mr-4" style="animation: float 3s ease-in-out infinite;"></i>
                         <div>
                             <h1 class="text-5xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 via-blue-400 to-green-400 glow-text">
-                                TruthFort
+                                NewsCheck
                             </h1>
                             <p class="text-gray-400 text-sm mt-1">Powered by Advanced AI Technology</p>
                         </div>
@@ -79,7 +79,7 @@
                         About the Project
                     </h2>
                     <p class="text-gray-300 mb-4 leading-relaxed">
-                        TruthFort is an advanced AI-powered platform that analyzes news claims against hundreds of verified sources. 
+                        NewsCheck is an advanced AI-powered platform that analyzes news claims against hundreds of verified sources. 
                         Using Natural Language Processing and Machine Learning, we provide instant verification with confidence scores.
                     </p>
                     <div class="grid grid-cols-2 gap-4 mt-4">
@@ -154,10 +154,10 @@
                 <div class="mt-8 pt-6 border-t border-gray-800">
                     <p class="text-gray-500 text-sm mb-2">Developed by ❣️ from: <span class="bg-blue-900 bg-opacity-40 text-blue-300 px-3 py-1 rounded-full text-xs">The Abhijay Chauhan</span></p>
                     <div class="flex flex-wrap gap-2">
-                        <!-- <span class="bg-blue-900 bg-opacity-40 text-blue-300 px-3 py-1 rounded-full text-xs">Abhijay Chauhan</span> -->
-                        <!-- <span class="bg-cyan-900 bg-opacity-40 text-cyan-300 px-3 py-1 rounded-full text-xs">Rakesh Singh</span> -->
-                        <!-- <span class="bg-green-900 bg-opacity-40 text-green-300 px-3 py-1 rounded-full text-xs">Jaya Maurya</span> -->
-                        <!-- <span class="bg-blue-800 bg-opacity-40 text-blue-200 px-3 py-1 rounded-full text-xs">Abhishek Kushwaha</span> -->
+                        <span class="bg-blue-900 bg-opacity-40 text-blue-300 px-3 py-1 rounded-full text-xs">Abhijay Chauhan</span>
+                        <span class="bg-cyan-900 bg-opacity-40 text-cyan-300 px-3 py-1 rounded-full text-xs">Rakesh Singh</span>
+                        <span class="bg-green-900 bg-opacity-40 text-green-300 px-3 py-1 rounded-full text-xs">Jaya Maurya</span>
+                        <span class="bg-blue-800 bg-opacity-40 text-blue-200 px-3 py-1 rounded-full text-xs">Abhishek Kushwaha</span>
                     </div>
                 </div>
             </div>
@@ -298,7 +298,7 @@
                         <i class="fas fa-phone text-green-400 mr-3"></i>
                         <span class="text-white font-semibold">Phone Support</span>
                     </div>
-                    <p class="text-gray-400 text-sm">+91 95061 72252</p>
+                    <p class="text-gray-400 text-sm">+91 ***** *****</p>
                 </div>
                 
                 <div class="bg-gray-800 rounded-lg p-4 border border-gray-700">
@@ -330,7 +330,7 @@
                     <i class="fas fa-shield-check text-4xl text-white"></i>
                 </div>
                 <h2 class="text-4xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 via-blue-400 to-green-400 mb-3">
-                    Why TruthFort?
+                    Why NewsCheck?
                 </h2>
                 <p class="text-gray-400 text-lg">Your Defense Against Misinformation</p>
             </div>
@@ -344,7 +344,7 @@
                         </div>
                         <div>
                             <h3 class="text-xl font-bold text-white mb-2">Our Mission</h3>
-                            <p class="text-gray-300">In an era of information overload, we empower users to distinguish truth from fiction. TruthFort is your trusted companion in the fight against fake news and misinformation.</p>
+                            <p class="text-gray-300">In an era of information overload, we empower users to distinguish truth from fiction. NewsCheck is your trusted companion in the fight against fake news and misinformation.</p>
                         </div>
                     </div>
                 </div>
@@ -356,7 +356,7 @@
                             <i class="fas fa-star text-white text-xl"></i>
                         </div>
                         <div>
-                            <h3 class="text-xl font-bold text-white mb-3">Why Choose TruthFort?</h3>
+                            <h3 class="text-xl font-bold text-white mb-3">Why Choose NewsCheck?</h3>
                             <ul class="space-y-2 text-gray-300">
                                 <li class="flex items-start">
                                     <i class="fas fa-check-circle text-cyan-400 mr-2 mt-1 flex-shrink-0"></i>
@@ -384,7 +384,7 @@
                         <div>
                             <h3 class="text-xl font-bold text-white mb-2">The Misinformation Crisis</h3>
                             <p class="text-gray-300 mb-3">Fake news spreads 6x faster than real news on social media. Misinformation can influence elections, damage reputations, and create public panic. Manual fact-checking is slow and often comes too late.</p>
-                            <p class="text-red-300 font-semibold">TruthFort provides the speed and accuracy needed to combat this crisis in real-time.</p>
+                            <p class="text-red-300 font-semibold">NewsCheck provides the speed and accuracy needed to combat this crisis in real-time.</p>
                         </div>
                     </div>
                 </div>
